# glinkfix

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE-BSD-3-CLAUSE  LICENSE.txt  Makefile  NEXTRELEASE.md  README.md  cliff.toml  global-gitignore.txt  justfile  make.py  poetry.toml  pyproject.toml  requirements.txt  setup-old.cfg  setup-old.py  setup.cfg  setup.py  wright.py
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
changelogs/: v1.0.x.md  v1.2.x.md  v2.0.x.md  v2.1.x.md
scripts/: archive_changelog.py  bump.py  dependency_upgrade_commit.py  extract_release_notes.sh  rebaseline.sh  release_tags.sh  upgrade_dependencies.sh
src/glinkfix/: __init__.py  __main__.py  app.py  constants.py  links.py  tools.py  version.py
tests/: __init__.py  test_app_entry_points.py  test_archive_changelog.py  test_dependency_upgrade_commit.py  test_extract_release_notes.py  test_fixlink.py  test_glinkfix.py  test_linkerrorstr.py  test_release_tags.py
