[tool.poetry]
name = "glinkfix"
version = "2.0.2"
description = "Google Drive Link Fixer"
authors = ["Peter Nardi <pete@nardi.com>"]
maintainers = ["Peter Nardi <pete@nardi.com>"]
homepage = "https://github.com/geozeke/glinkfix"
license = "MIT"
readme = "README.md"
packages = [{ include = "glinkfix", from = "src" }]
include = ["LICENSE", "LICENSE-BSD-3-CLAUSE"]
keywords = [
	"glinkfix",
	"google",
	"drive",
	"link",
	"curl",
	"markdown",
	"embed",
	"image",
	"download",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Topic :: Utilities",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Source Code" = "https://github.com/geozeke/glinkfix"
"Bug Tracker" = "https://github.com/geozeke/glinkfix/issues"

[tool.poetry.scripts]
glinkfix = "glinkfix.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
mypy = "^0.982"
pytest = "^7.1.3"
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
force-single-line = true
