[project]
name = "glinkfix"
version = "2.0.3"
description = "Google Drive Link Fixer"
authors = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
maintainers = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
homepage = "https://github.com/geozeke/glinkfix"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = [
	"glinkfix",
	"google",
	"drive",
	"link",
	"curl",
	"markdown",
	"embed",
	"image",
	"download",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Topic :: Utilities",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyperclip>=1.9.0",
]

[project.urls]
"Source Code" = "https://github.com/geozeke/glinkfix"
"Bug Tracker" = "https://github.com/geozeke/glinkfix/issues"

[project.scripts]
glinkfix = "glinkfix.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
	"global-gitignore.txt",
	"Makefile",
	"tests/**",
    ".gitignore",
    "uv.lock",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
]
