[project]
name = "glinkfix"
version = "2.0.5"
description = "Google Drive Link Fixer"
authors = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
maintainers = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = [
	"glinkfix",
	"google",
	"drive",
	"link",
	"curl",
	"markdown",
	"embed",
	"image",
	"download",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Topic :: Utilities",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyperclip>=1.9.0",
    "tomli>=1.1.0 ; python_full_version < '3.11'",
]

[project.urls]
"Source Code" = "https://github.com/geozeke/glinkfix"
"Bug Tracker" = "https://github.com/geozeke/glinkfix/issues"

[project.scripts]
glinkfix = "glinkfix.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
	"global-gitignore.txt",
	"Makefile",
	"tests/**",
    ".gitignore",
    "uv.lock",
]
[tool.hatch.build.targets.wheel.force-include]
"./pyproject.toml" = "glinkfix/pyproject.toml"

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
omit = [
	"tests/*",
]

[tool.coverage.report]
exclude_also = [
	"except pc.PyperclipException:",
	"if __name__ == \"__main__\":",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.1",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
