[bumpversion]
current_version = 1.0.8

[bumpversion:file:setup.cfg]
search = {current_version}
replace = {new_version}

[bumpversion:file:version.txt]
search = {current_version}
replace = {new_version}

[bumpversion:file:./src/glinkfix/__init__.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:./src/glinkfix/__main__.py]
search = {current_version}
replace = {new_version}

[metadata]
name = glinkfix
version = attr: glinkfix.__version__
author = Peter Nardi
author_email = pete@nardi.com
maintainer = Peter Nardi
maintainer_email = pete@nardi.com
home_page = https://github.com/geozeke/glinkfix
project_urls = 
	Source Code = https://github.com/geozeke/glinkfix
	Bug Tracker = https://github.com/geozeke/glinkfix/issues
description = Google Drive Link Fixer
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	glinkfix
	google
	drive
	link
	curl
	markdown
	embed
	image
	download
license = MIT
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Topic :: Education
	Topic :: Games/Entertainment :: Simulation
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir = 
	= src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	glinkfix = glinkfix.__main__:main

[flake8]
per-file-ignores = 
	__init__.py:D, F401
